app/assets/stylesheets/_home.sass
#home

  #slideshow
    img
      width: 100%
      height: 100%

  .orbit-bullets
    left: 300px
    top: 400px

  .blackBlock
    font-family: "Gandhi Sans", sans-serif
    background: rgba(0,0,0,0.8)
    color: white
    padding: 10px

  .whiteBlock
    font-family: "Gandhi Sans", sans-serif
    background: white
    color: black
    padding: 10px

  .separator
    margin-bottom: 20px

  section
    padding: 64px 0

    &#welcome
      background: image-url('home/bg/welcome.jpg') no-repeat center center
      +background-size(cover)
      padding-top: 40px


        /* Topbar home */
      .social
        text-align: right
        margin-bottom: 30px
        a
          display: inline-block
          border: 1px solid white
          text-align: center
          margin-right: 10px
          height: 30px
          width: 30px
          color: white
          line-height: 23pt

          &.facebook
            background-color: #3c5a9a

          &.twitter
            background-color: #359bed

          &.play
            background-color: #e82d28


        select
          +appearance(none)
          background: image-url('arrow.png') no-repeat 30px 10px transparent
          border: 1px solid white
          +border-radius(none)
          color: white
          height: 30px
          float: right
          padding: 6px
          font-size: .7em
          text-indent: 0.01px
          text-overflow: ""

          option
            color: black

      h1
        background: url("/assets/home/logos/ouishare.png") no-repeat
        color: white
        height: 71px
        margin-top: 100px
        overflow: hidden
        text-indent: -9999px
        width: 364px

        small
          color: white

      h2
        @extend .blackBlock
        display: inline-block
        text-transform: uppercase
        margin-bottom: 7px

      .textBlock
        padding: 0

        .space
          @extend .blackBlock
          line-height: 2em
          padding: 3px 10px
          font-size: 14px
          white-space: pre-line
          display: inline


      .subscribe
        @extend .blackBlock
        margin-top: 40px
        padding: 10px

        form
          margin: 0

        input
          border: 1px solid white
          background: rgba(0,0,0,0.8)
          color: white
          margin: 0
          height: 46px

        .btn
          font-family: "Gandhi Sans", sans-serif
          font-style: italic
          text-transform: uppercase
          background: white
          color: $blue
          border: 1px solid white
          font-size: 14px
          font-weight: bold

          &:hover
            background: darken($blue, 10%)
            color: white

        .prefix, .postfix
          height: 46px


    &#about
      background: image-url('home/bg/about.jpg') no-repeat
      +background-size(cover)
      text-align: center
      40px: padding 0

      .box
        background: white
        padding: 10px
        height: 285px

      h4
        font-family: "Gandhi Sans", sans-serif
        font-weight: 400
        text-transform: uppercase

      .icon
        width: 171px
        height: 131px
        display: block
        margin: 0 auto

      p
        font-size: 14px

      .separator
        width: 100%

    &#hot, &#events
      color: white

      .projects, .events
        text-align: center
        font-family: "Gandhi Sans", sans-serif

        li
          p, a
            text-align: left
            text-transform: uppercase
            color: white

            &:hover, &:visited
              color: white

            &.title
              font-size: 20px

          img.project
            width: 100%
            height: 100%
            display: block
            margin-bottom: 20px

        a.more
          float: right
          color: white
          font-size: 12px
          font-style: italic


    &#hot
      background: $blue

      .seta
        background: image-url('home/hot-arrow.png') no-repeat center
        display: block
        height: 17px
        margin: 20px 0
        width: 100%

    &#events
      background: $red
      border-top: 1px solid white

      img
        width: 100%
        margin-bottom: 10px

      p.text, p.meta
        font-size: 14px
        font-weight: normal
        font-family: "Gandhi Sans"


    &#articles
      color: black
      border-top: 1px solid white

      .articles

        li
          position: relative

          .title
            text-align: left
            text-transform: uppercase
            font-size: 1.1em
            color: black
            display: block
            min-height: 75px

          img.article
            width: 100%
            height: 100%
            display: block

          div.author
            display: inline-block
            width: 70%

            img.avatar
              margin-top: 20px
              margin-right: 15px
              float: left
            .name
              font-size: 12px
              display: inline-block
              margin: 23px 0 0
            .date
              font-size: 12px
              color: black

      a.button
        background: $blue
        color: white
        border: 0
        font-size: 1.3em
        text-transform: uppercase
        font-style: italic
        padding: 10px

    &#bepart
      background: image-url('home/bg/about.jpg') no-repeat center
      +background-size(cover)
      width: 100%
      height: 100%

      .part
        background: white
        padding: 0 10px
        margin-bottom: 20px
        overflow: hidden
        font-family: "Gandhi Sans"

        &:last-child
          margin-bottom: 0

        h4
          @extend .whiteBlock
          font-weight: 500
          margin-bottom: 0
          text-transform: uppercase

      .takePart, .comeTo, .donate
        float: left
        width: 133px
        height: 116px
        display: block

      .takePart
        background: image-url('home/icons/takePart.png') no-repeat
      .comeTo
        background: image-url('home/icons/goEvent.png') no-repeat
      .donate
        background: image-url('home/icons/donate.png') no-repeat

      a.button
        background: $blue
        color: white
        border: 0
        font-size: 1.3em
        text-transform: uppercase
        font-style: italic
        padding: 10px


    &#partners
      text-align: center

      ul
        display: table
        margin: 20px auto

      li
        margin: 0
        padding: 0 10px

        p
          line-height: 30px

    &#know-more
      background: #eee

